# mac-skills

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: validate_skills.py
skills/macos-calendar/: SKILL.md
skills/macos-calendar/agents/: openai.yaml
skills/macos-calendar/scripts/: read_calendar.py
skills/macos-notes/: SKILL.md
skills/macos-notes/agents/: openai.yaml
skills/macos-notes/scripts/: read_notes.py
skills/macos-permissions/: SKILL.md
skills/macos-permissions/agents/: openai.yaml
skills/macos-reminders/: SKILL.md
skills/macos-reminders/agents/: openai.yaml
skills/macos-reminders/scripts/: read_reminders.py
src/maccli/: __init__.py  calendar.py  cli.py  notes.py  reminders.py
tests/: test_calendar.py  test_notes.py  test_reminders.py  test_skill_launchers.py
